[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Spritesheets/industrial.v2.png" type="Texture" id=1]
[ext_resource path="res://Actors/Interactables/Timer/Timer.gd" type="Script" id=2]

[node name="Timer" type="Sprite"]
texture = ExtResource( 1 )
hframes = 4
region_enabled = true
region_rect = Rect2( 64, 160, 64, 16 )
script = ExtResource( 2 )
time = 3.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ActivateSFX" type="AudioStreamPlayer" parent="."]
volume_db = -2.0
pitch_scale = 0.8
bus = "SFX"

[node name="TickSFX" type="AudioStreamPlayer" parent="."]
volume_db = -4.0
bus = "SFX"
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
